--- a/exam-prep-battle-ships/src/main/resources/application.yml
+++ b/exam-prep-battle-ships/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     password: 12345
-    url: jdbc:mysql://localhost:3306/softuni-thymeleaf-validation?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/battle-ships-exam-prep?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
     username: root
   jpa:
     hibernate:
@@ -17,8 +17,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-        format_sql: false
-        show_sql: false
+        format_sql: true
+        show_sql: true
   mvc:
     hiddenmethod:
       filter:
